[bumpversion]
commit = True
current_version = 0.36.1
files = asgi_tools/__init__.py
tag = True
tag_name = {new_version}
message = build(version): {current_version} -> {new_version}

[wheel]
python-tag = py3

[metadata]
name = asgi-tools
version = attr: asgi_tools.__version__
url = https://github.com/klen/asgi-tools
description = Is a toolkit to build ASGI applications faster
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = asyncio, trio, asgi, asgi tools, request, response
project_urls = 
	Documentation = https://klen.github.io/asgi-tools
	Source code = https://github.com/klen/asgi-tools
	Issue tracker = https://github.com/klen/asgi-tools/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Framework :: AsyncIO
	Framework :: Trio

[options]
packages = asgi_tools,
python_requires = >= 3.7
zip_safe = False
install_requires = 
	multidict
	yarl
	http-router >= 2.0.1
	sniffio
	cached_property;    python_version<'3.8'
	typing_extensions;  python_version<'3.8'

[options.package_data]
asgi_tools = 
	py.typed

[options.extras_require]
tests = 
	aiofile
	anyio
	pytest
	pytest-mypy
	trio
	curio
examples = 
	uvicorn
	websockets
	jinja2
	httpx
build = 
	bump2version
	twine
	wheel
	idna<3
docs = 
	sphinx
	sphinx-rtd-theme

[tool:pytest]
addopts = -xsv --mypy

[pylama]
ignore = D202,D203,D205,D210,D212,D213,D400,D401,D415

[pylama:tests*]
ignore = D

[mypy]

[mypy-aiofile]
ignore_missing_imports = True

[mypy-curio]
ignore_missing_imports = True

[mypy-trio]
ignore_missing_imports = True

[mypy-cached_property]
ignore_missing_imports = True

[tox:tox]
envlist = py37,py38,py39

[testenv]
deps = -e .[tests]
commands = 
	pytest tests
