[wheel]
python-tag = py3

[metadata]
name = asgi-tools
version = attr: asgi_tools.__version__
url = https://github.com/klen/asgi-tools
description = Is a toolkit to build ASGI applications faster
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = asgi, asgi-tools, request, response, asyncio, trio
project_urls = 
	Documentation = https://klen.github.io/asgi-tools
	Source code = https://github.com/klen/asgi-tools
	Issue tracker = https://github.com/klen/asgi-tools/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
        Programming Language :: Python :: Implementation :: PyPy
	Framework :: AsyncIO
	Framework :: Trio

[options]
packages = asgi_tools,
python_requires = >= 3.7
include_package_data = True
install_requires = 
	http-router >= 2.0.3
	multidict
	python-multipart
	sniffio
	yarl
	cached_property;    python_version<'3.8'
	typing_extensions;  python_version<'3.8'

[options.package_data]
asgi_tools =
    py.typed

[options.extras_require]
ujson = 
	ujson
orjson = 
	orjson
tests = 
	aiofile
	pytest
	pytest-aio[curio,trio] >= 0.4.3
	pytest-benchmark
        pytest-mypy; implementation_name == 'cpython'
	uvloop; implementation_name == 'cpython'
examples = 
	uvicorn
	websockets
	jinja2
	httpx
build = 
	bump2version
	twine
	wheel
	idna<3
docs = 
	sphinx
        pydata-sphinx-theme

[tool:pytest]
addopts = -xsv

[pylama]
ignore = D202,D203,D205,D210,D212,D213,D400,D401,D415

[pylama:tests*]
ignore = D

[mypy]
ignore_missing_imports = True

[tox:tox]
envlist = py37,py38,py39,pypy37

[testenv]
deps = -e .[tests]
commands = 
        mypy asgi_tools
	pytest tests

[testenv:pypy37]
commands = 
	pytest tests
